04.Network/06.networkPolicy/ingress-networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress80443-network-policy
  namespace: nginx
spec:
  podSelector:
    matchLabels:
      app: nginx  # pod 지정
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0  # IP any open
    ports:
    - protocol: TCP
      port: 80  # nodeport의 경우 nodeport port를 지정
    # - protocol: TCP
    #   port: 444
  egress: 
  - {}  # any open
